# amt21_driver_cpp

./: CMakeLists.txt  README.md  checksum_and_read_extraction.cc  main.cc  usb_test.cpp
examples/: read_encoder_angle.cc
include/: amt21_driver.h
src/: amt21_driver.cc
tests/: error_code_validation.cpp  main.cc  usb_test.cpp
tools/: amt21_driver.pc.in
